(executable
 (public_name ppl-playground)
 (name main)
 (libraries ppl gmp)
  (link_flags

  (:include link_flags.%{system})
  (:standard
   -cclib
   -lppl
   -cclib
   -lppl_ocaml
   -cclib
   -lstdc++
   -cclib
   -lgmp
   -cclib
   -lgmpxx)))


(rule
 (with-stdout-to
  link_flags.linux
  (echo "(-cclib -static -cclib -ltinfo)")))

(env
 (dev
  (flags
   (:standard -warn-error -A))))